# rtxconfig

./: .gitignore  README.md  main.py  pyproject.toml  sitecustomize.py
configs/: config.example.yaml
docs/: usage.md
rtxconfig/: __init__.py  cli.py  config.py  connection.py  manager.py
templates/: basic_rtx830.txt  schedule.txt
